--- a/FirstAndroidApp/res/values/strings.xml
+++ b/FirstAndroidApp/res/values/strings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+
     <string name="app_name">First Android App</string>
     <string name="action_settings">Settings</string>
-    <string name="line1">My First Android App</string>
-    <string name="line2">Summer 2013</string>
-    <string name="line3">Julian Eljabali</string>
-    <string name="line4">ID # W10398874</string>
+    <string name="text1">My First Android App</string>
+    <string name="text2">Summer 2013</string>
+    <string name="text3">Julian Eljabali</string>
+    <string name="text4">ID #  W10398874</string>
+        
 </resources>
