--- a/PhotoAlbum/res/values/strings.xml
+++ b/PhotoAlbum/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="previous">Prev</string>
     <string name="next">Next</string>
-    <string name="desc">desc</string>
+    <string name="desc">Images</string>
     
     
 
